tweak for Java 17